# chinese-chess-recognition

./: main.py  pyproject.toml
