[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cchess_recognition"
version = "1.0.1"
description = "Chinese Chess Recognition"
readme = "README.md"
authors = [
    {name = "theone", email = "297190869@qq.com"}
]
license = {text = "Apache License 2.0"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.4,<2",
    "torch>=2.2.2",
    "torchvision>=0.17.0",
    "mmcv>=2.0.0rc4,<2.2.0",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0",
    "albumentations>=2.0.5",
    "mmengine>=0.10.1",
    "mmdet>=3.1.0",
    "mmpose>=1.3.2",
    "mmpretrain>=1.2.0",
    "mmdeploy>=1.0.0",
    "onnxruntime>=1.16.0",
    "mmdeploy-runtime>=1.3.1",
    "xtcocotools>=1.13",
    "pyperclip>=1.11.0",
    "loguru>=0.7.3",
    "click>=8.1.8",
    "requests>=2.32.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TheOne1006/chinese-chess-recognition"
Repository = "https://github.com/TheOne1006/chinese-chess-recognition"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools]
packages = ["cchess_pose", "cchess_reg"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 0
known_standard_library = ["pkg_resources", "setuptools"]
known_first_party = ["cchess_pose", "cchess_reg"]
known_third_party = ["cv2", "json_tricks", "mmcv", "mmdet", "munkres", "numpy", "xtcocotools", "torch"]
no_lines_before = ["STDLIB", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.uv.extra-build-dependencies]
chumpy = ["pip"]
